--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "Aidar Algo",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^2.9.9",
     "express": "^4.11.2",
     "jade": "^1.9.2",
     "mongoose": "^3.8.23"
   },
   "devDependencies": {
-    "bower": "^1.3.12"
+    "bower": "^1.3.12",
+    "chai": "^2.0.0"
   }
 }
