--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,8 @@
     "angular": "~1.3.13",
     "bootstrap": "~3.3.2",
     "angular-resource": "~1.3.13"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.3.13"
   }
 }
