--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^2.9.9",
+    "body-parser": "^1.11.0",
     "express": "^4.11.2",
     "jade": "^1.9.2",
     "mongoose": "^3.8.23"
   },
   "devDependencies": {
     "bower": "^1.3.12",
-    "chai": "^2.0.0"
+    "chai": "^2.0.0",
+    "karma": "^0.12.31",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "phantomjs": "^1.9.15",
+    "supertest": "^0.15.0"
   }
 }
